@@ -8,7 +8,7 @@
       %small
         = link_to_task_edit(pending, bucket) + " | "
         = link_to_task_delete(pending, bucket) + "&nbsp;"
-    = check_box_tag :complete, 1, false, :onclick => link_to_task_complete(pending, bucket)
+    = check_box_tag dom_id(pending, :complete), 1, false, :onclick => link_to_task_complete(pending, bucket)
     %label{ :id => dom_id(pending, :name) }
       - if pending.user.id != @current_user.id
         == From #{link_to(pending.user.full_name, "mailto:" + pending.user.email)}:
